# FingerBerry

./: Makefile  app.py  autostart.sh  fingerprint_data.json  pyproject.toml  pytree.sh  r503manager.py  requirements.txt  test.py  verifyFinger.py
api/: __init__.py  background.py  models.py  routes.py  websocket.py
fingerprint/: r503led.py  r503manager.py
smarthome/: config.json  smarthome.py
static/: index.html  script.js  styles.css
