[project]
name = "claudehandshake"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "adafruit-circuitpython-fingerprint>=2.2.19",
    "click>=8.1.8",
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "jinja2>=3.1.6",
    "pydantic>=2.11.4",
    "pyfingerprint>=1.5",
    "python-multipart>=0.0.20",
    "requests>=2.32.3",
    "uvicorn>=0.34.2",
    "websockets>=15.0.1",
]
